--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,21 @@ aiohttp==3.9.1
 aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==23.1.0
+contourpy==1.2.0
+cycler==0.12.1
 discord==2.3.2
 discord.py==2.3.2
+fonttools==4.46.0
 frozenlist==1.4.0
 idna==3.6
+kiwisolver==1.4.5
+matplotlib==3.8.2
 multidict==6.0.4
+numpy==1.26.2
+packaging==23.2
+Pillow==10.1.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+six==1.16.0
 yarl==1.9.3
